syntax = "proto3"; 

option go_package = "./";
//option go_package = "grpc/proto;proto";

message HelloRequest {
    string SomeString = 1; 
}

message HelloResponse {
    string Reply = 1; 
}

service Example {
    rpc ServerReply(HelloRequest) returns (HelloResponse);
}

// protoc --go-grpc_out =. --go_out=. *.proto